--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,8 @@
 <footer class="footer {{ with site.Params.chalk.scrollappear_enabled }}scrollappear{{ end }}">
   <p>
-    <span>&copy; {{ now.Year }} <a href="{{ `` | absURL }}">{{ site.Title }}</a></span>
-    <span>Powered by <a href="https://gohugo.io/" rel="noopener" target="_blank">Hugo</a></span>
-    <span>Theme is based on <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank">Chalk</a></span>
+    <span>&copy; {{ now.Year }} <a href="{{ `` | absURL }}">{{ site.Title }}.</a></span>
+    <span>Licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" rel="noopener" target="_blank">CC BY 4.0</a>.</span>
+    <span>Powered by <a href="https://gohugo.io/" rel="noopener" target="_blank">Hugo</a>.</span>
+    <span>Theme based on <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank">Chalk</a>.</span>
   </p>
 </footer>
