attempt at centering images

--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,12 +1,10 @@
-{{ $image := resources.Get (.Get "path")  }}
-{{ $image_detail := resources.Get (or (.Get "path_detail") (.Get "path")) }}
+{{ $src := .Get "src" }}
+{{ $alt := .Get "alt" }}
 
-{{ with and $image $image_detail }}
-  <a href="{{ $image_detail.RelPermalink }}">
-    <img src="{{ $image.RelPermalink }}" alt="{{ $.Get `alt` }}" class="zooming"
-      data-rjs="{{ $image_detail.RelPermalink }}"
-      data-zooming-width="{{ $image_detail.Width }}"
-      data-zooming-height="{{ $image_detail.Height }}"
-    />
-  </a>
-{{ end }}
+<div class="center">
+  <img
+    src="{{ $src }}"
+    alt="{{ $alt }}"
+    decoding="async"
+  />
+</div>
