--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -167,3 +167,16 @@ img {
   width: 60%;
 }
 
+figure {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+  border: thin solid;
+  margin: 0.5em;
+  padding: 0.5em;
+}
