--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -2,12 +2,12 @@
 {{ $alt := .Get "alt" }}
 {{ $caption := .Get "caption" }}
 
-
-<figure>
-  <p><img src="{{ $src }}"
-	  alt="{{ $alt }}"
-	  decoding="async">
-  <figcaption>{{ $caption }}</figcaption>
- </p>
-</figure>
-
+<div class="center">
+  <figure>
+    <p><img src="{{ $src }}"
+	    alt="{{ $alt }}"
+	    decoding="async">
+      <figcaption>{{ $caption }}</figcaption>
+    </p>
+  </figure>
+</div>
