--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -168,15 +168,16 @@ img {
 }
 
 figure {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
+  position: fixed;
+  border: thin solid;
+  padding: 5px;
+  margin: auto;
+}
+
+figcaption {
   text-align: center;
   font-style: italic;
   font-size: smaller;
   text-indent: 0;
-  border: thin solid;
-  margin: 0.5em;
-  padding: 0.5em;
+  padding: 2px;
 }
