--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -174,7 +174,7 @@ figure {
 }
 
 figcaption {
-  text-align: center;
+  text-align: right;
   font-style: italic;
   font-size: smaller;
   text-indent: 0;
