--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -4,10 +4,9 @@
 
 <div class="center">
   <figure>
-    <p><img src="{{ $src }}"
+    <img src="{{ $src }}"
 	    alt="{{ $alt }}"
 	    decoding="async">
       <figcaption>{{ $caption }}</figcaption>
-    </p>
   </figure>
 </div>
