--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -174,12 +174,16 @@ figure {
   margin: auto;
 }
 
+
 figcaption {
-  display: table-caption;
-  caption-side: top;
+  transform: rotate(90deg);
+  transform-origin: top right;
   text-align: right;
   font-style: italic;
   font-size: smaller;
   text-indent: 0;
   padding: 2px;
+}
+figcaption p {
+  margin: 0;
 }
