figure params link

--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,9 +1,9 @@
 {{ $src := .Get "src" }}
 {{ $alt := .Get "alt" }}
 {{ $title := .Get "title" }}
-{{ $author := .Get "$author" }}
-{{ $linkauthor := .Get "$linkauthor" }}
-{{ $credit := .Get "$credit" }}
+{{ $author := .Get "author" }}
+{{ $linkauthor := .Get "linkauthor" }}
+{{ $credit := .Get "credit" }}
 
 <div class="center">
   <figure>
