--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -2,7 +2,6 @@
 {{ $alt := .Get "alt" }}
 {{ $title := .Get "title" }}
 {{ $author := .Get "author" }}
-{{ $linkauthor := .Get "linkauthor" }}
 {{ $credit := .Get "credit" }}
 
 <div class="center">
@@ -12,7 +11,7 @@
 	    decoding="async">
     <figcaption>{{ $title }}
       by
-      <a href={{ $linkauthor }}>{{ $author }}</a>
+      {{ $author }}
       ({{ $credit }})
     </figcaption>
   </figure>
