trying to add disqus comments

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,8 +23,7 @@
 
   {{ with site.Params.discus_identifier }}
     <div id="disqus_thread" class="article-comments"></div>
-    <script src="https://{{ site.Params.discus_identifier }}.disqus.com/embed.js" async defer></script>
-    <noscript>Please enable JavaScript to view the comments.</noscript>
+    {{ partial "disqus.html" . }}
   {{ end }}
 </article>
 {{ end }}
