--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,7 +21,7 @@
     </a>
   </div>
 
-  <strong>this is a test</strong>
+  <strong>this is a test: A{{ site.Params.discus_identifier }} B{{ site.Params.disqus_identifier }} C{{ site.Params.disqusShortname }} </strong>
   
   {{ with site.Params.discus_identifier }}
   <strong>this is a second test</strong>
