--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -24,15 +24,15 @@
   <strong>this is a test:
     A
     a $.Site.Params.discus_identifier
-    b site.Params.discus_identifier
-    c {{ $.Site.Params.discus_identifier }}
+    b {{ printf "%s" site.Params.discus_identifier }}
+    c {{ printf "%s" $.Site.Params.discus_identifier }}
     B
     a $.Site.Params.disqus_identifier
-    b site.Params.disqus_identifier
+    b {{ printf "%s" site.Params.disqus_identifier }}
     c {{ $.Site.Params.disqus_identifier }}
     C
     a $.Site.Params.disqusShortname
-    b site.Params.disqusShortname
+    b {{ printf "%s" site.Params.disqusShortname }}
     c {{ $.Site.Params.disqusShortname }}
   </strong>
   
