--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,17 +23,15 @@
 
   <strong>this is a test:
     A
-    a $.Site.Params.discus_identifier
     b {{ printf "%s" site.Params.discus_identifier }}
     c {{ printf "%s" $.Site.Params.discus_identifier }}
     B
-    a $.Site.Params.disqus_identifier
     b {{ printf "%s" site.Params.disqus_identifier }}
-    c {{ $.Site.Params.disqus_identifier }}
+    c {{ printf "%s" $.Site.Params.disqus_identifier }}
+    d {{ printf "%s" site.Params.twitter }}
     C
-    a $.Site.Params.disqusShortname
     b {{ printf "%s" site.Params.disqusShortname }}
-    c {{ $.Site.Params.disqusShortname }}
+    c {{ printf "%s" $.Site.Params.disqusShortname }}
   </strong>
   
   {{ with site.Params.discus_identifier }}
