--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,6 +27,8 @@
     c {{ printf "%s" $.Params.discus_identifier }}
     d {{ printf "%s" $.Params.disqusShortname }}
     e {{ printf "%s" $.Params.discus_identifier }}
+    f {{ printf "%s" $.Site.BaseURL }}
+    g {{ printf "%s" site.BaseURL }}
     B
     b {{ printf "%s" site.Params.disqus_identifier }}
     c {{ printf "%s" $.Site.Params.disqus_identifier }}
