--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -24,7 +24,7 @@
   <strong>this is a test:
     A
     b {{ printf "%s" .Title }}
-    c {{ printf "%s" site.discus_identifier }}
+    c {{ printf "%s" $.Params.discus_identifier }}
     d {{ printf "%s" $.Params.disqusShortname }}
     e {{ printf "%s" $.Params.discus_identifier }}
     f {{ printf "%s" $.Site.BaseURL }}
