--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,7 +27,7 @@
     c {{ printf "%s" $.Params.discus_identifier }}
     d {{ printf "%s" $.Params.disqusShortname }}
     e {{ printf "%s" $.Params.discus_identifier }}
-    f {{ printf "%s" $.Site.disqusShortname }}
+    f {{ printf "%s" $.Site.DisqusShortname }}
     g {{ printf "%s" site.BaseURL }}
     B
     b {{ printf "%s" site.Params.disqus_identifier }}
