--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -24,11 +24,10 @@
   <strong>this is a test:
     A
     b {{ printf "%s" .Title }}
-    c {{ printf "%s" $.Params.discus_identifier }}
-    d {{ printf "%s" $.Params.disqusShortname }}
-    e {{ printf "%s" $.Params.discus_identifier }}
+    c {{ printf "%s" $.Site.Discus_identifier }}
+    d {{ printf "%s" $.Site.Disqus_identifier }}
     f {{ printf "%s" $.Site.DisqusShortname }}
-    g {{ printf "%s" site.BaseURL }}
+    g {{ printf "%s" site.DisqusShortname }}
     B
     b {{ printf "%s" site.Params.disqus_identifier }}
     c {{ printf "%s" $.Site.Params.disqus_identifier }}
