--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,7 +26,7 @@
     g {{ printf "%s" site.DisqusShortname }}
   </strong>
   
-  {{ with site.DisqusShortname }}
+  {{ with $.Site.DisqusShortname }}
   <strong>this is a second test</strong>
     <div id="disqus_thread" class="article-comments"></div>
     {{ template "_internal/disqus.html" . }}
