--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -24,12 +24,15 @@
   <strong>this is a test:
     f {{ printf "%s" $.Site.DisqusShortname }}
     g {{ printf "%s" site.DisqusShortname }}
+  {{ with $.Site.DisqusShortname }}
+    h {{ printf "%s" . }}
+  {{ end }}
   </strong>
   
   {{ with $.Site.DisqusShortname }}
   <strong>this is a second test</strong>
     <div id="disqus_thread" class="article-comments"></div>
-    {{ template "_internal/disqus.html" . }}
+<!--    {{ template "_internal/disqus.html" . }} -->
   {{ end }}
 </article>
 {{ end }}
