--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,12 +29,8 @@
   {{ end }}
   </strong>
   
-  {{ with $.Site.DisqusShortname }}
-    {{ $myv := . }}
-  <strong>this is a second test</strong>
     <div id="disqus_thread" class="article-comments">
-      {{ template "_internal/disqus.html" $myv }}
+      {{ template "_internal/disqus.html" . }}
     </div>
-  {{ end }}
 </article>
 {{ end }}
