--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -30,7 +30,7 @@
   </strong>
   
     <div id="disqus_thread" class="article-comments">
-       {{ partial "disqus.html" . }}
+       {{ partial "layouts/partials/disqus.html" . }}
     </div>
 </article>
 {{ end }}
