attempt to add mastodon

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -13,7 +13,7 @@
         <li>
           <a
             href="{{ $value.url }}{{ . }}"
-            rel="noreferrer noopener"
+            rel="me noreferrer noopener"
             target="_blank"
             title="{{ $value.title }}">
             {{ partial "svg-icon.html" (dict "context" . "icon" $key) }}
