--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,9 +26,9 @@
        <div id="cusdis_thread" 
 	  data-host="https://cusdis.com"
 	  data-app-id=.
-	  data-page-id="{{ PAGE_ID }}"
-	  data-page-url="{{ PAGE_URL }}"
-	  data-page-title="{{ PAGE_TITLE }}">
+	  data-page-id="{{ .File.UniqueID }}"
+	  data-page-url="{{ .Permalink }}"
+	  data-page-title="{{ .Title }}">
        </div>
        <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
      </div>
