--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,7 +21,7 @@
     </a>
   </div>
 
-  {{ with site.Params.cusdis_id }}
+  {{ with site.cusdisId }}
      <div  class="article-comments">
        <div id="cusdis_thread" 
 	  data-host="https://cusdis.com"
