--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,7 +21,7 @@
     </a>
   </div>
 
-  {{ with Site.cusdisId }}
+  {{ with .Site.cusdisId }}
      <div  class="article-comments">
        <div id="cusdis_thread" 
 	  data-host="https://cusdis.com"
