--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -22,17 +22,15 @@
   </div>
 
   
-  {{ with site.cusdisId }}
      <div  class="article-comments">
        <div id="cusdis_thread" 
 	  data-host="https://cusdis.com"
-	  data-app-id=.
+	  data-app-id="{{ .Site.cusdisId }}"
 	  data-page-id="{{ .File.UniqueID }}"
 	  data-page-url="{{ .Permalink }}"
 	  data-page-title="{{ .Title }}">
        </div>
        <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
      </div>
-  {{ end }}
 </article>
 {{ end }}
