--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,7 +25,7 @@
      <div  class="article-comments">
        <div id="cusdis_thread" 
 	  data-host="https://cusdis.com"
-	  data-app-id="{{ .Site.cusdisId }}"
+	  data-app-id="{{ .Site.Params.cusdisId }}"
 	  data-page-id="{{ .File.UniqueID }}"
 	  data-page-url="{{ .Permalink }}"
 	  data-page-title="{{ .Title }}">
