--- a/assets/stylesheets/modules/_articles.scss
+++ b/assets/stylesheets/modules/_articles.scss
@@ -220,3 +220,145 @@
     margin-top: -7px;
   }
 }
+
+
+/* EM May 2023 - Styling for Mastodon-based comments copied from https://gitlab.com/ognarb/blog/-/blob/master/assets/scss/partials/article.scss#L310 */
+
+.mastodon-wrapper {
+    display: flex;
+    gap: 3rem;
+    flex-direction: row;
+}
+
+.comment-level {
+    max-width: 3rem;
+    min-width: 3rem;
+}
+
+.reply-original {
+    display: none;
+}
+
+.mastodon-comment {
+    background-color: var(--body-background);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    margin-bottom: 1rem;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    flex-grow: 2;
+
+    .comment {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        flex-wrap: true;
+    }
+
+    .comment-avatar img {
+        width: 6rem;
+    }
+
+    .content {
+        flex-grow: 2;
+    }
+
+    .comment-author {
+        display: flex;
+        flex-direction: column;
+
+        &-name {
+            font-weight: bold;
+            a {
+                display: flex;
+                align-items: center;
+            }
+        }
+
+        &-date {
+            margin-left: auto;
+        }
+    }
+
+    .disabled {
+        color: var(--accent-color)
+    }
+}
+
+.mastodon-comment-content p:first-child {
+    margin-top: 0;
+}
+
+.mastodon {
+  --dlg-bg: #282c37;
+  --dlg-w: 600px;
+  --dlg-color: #9baec8;
+  --dlg-button-p: 0.75em 2em;
+  --dlg-outline-c: #00D9F5;
+}
+
+.copypaste {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  input {
+    display: block;
+    font-family: inherit;
+    background: #17191f;
+    border: 1px solid #8c8dff;
+    color: #9baec8;
+    border-radius: 4px;
+    padding: 6px 9px;
+    line-height: 22px;
+    font-size: 14px;
+    transition: border-color .3s linear;
+    flex: 1 1 auto;
+    overflow: hidden;
+  }
+
+  .button {
+    border: 10px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: inherit;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 22px;
+    overflow: hidden;
+    padding: 7px 18px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: auto;
+    background-color: #232730;
+    &:hover {
+      background-color: #16181e;
+    }
+  }
+}
+
+[data-component*="dialog"] * {
+  box-sizing: border-box;
+  outline-color: var(--dlg-outline-c, hsl(218, 79.19%, 35%))
+}
+:where([data-component*="dialog"]) {
+  --dlg-gap: 1em;
+  background: var(--dlg-bg, #fff);
+  border: var(--dlg-b, 0);
+  border-radius: var(--dlg-bdrs, 0.25em);
+  box-shadow: var(--dlg-bxsh, 0px 25px 50px -12px rgba(0, 0, 0, 0.25));
+  font-family:var(--dlg-ff, ui-sansserif, system-ui, sans-serif);
+  min-inline-size: var(--dlg-mis, auto);
+  padding: var(--dlg-p, var(--dlg-gap));
+  width: var(--dlg-w, fit-content);
+  color: var(--dlg-color, #000);
+}
+
