Comment out social media article share snippet

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
     {{ partial "article/info-footer.html" . }}
   </header>
 
-  <div class="article-content">
+<!--   <div class="article-content">
     {{ .Content }}
   </div>
   <div class="article-share">
@@ -19,7 +19,7 @@
     <a href="https://www.facebook.com/sharer/sharer.php?href={{ .Permalink }}" title="Share on Facebook" rel="noreferrer noopener" target="_blank">
       <svg viewBox="0 0 512 512"><path d="M288 192v-38.1c0-17.2 3.8-25.9 30.5-25.9H352V64h-55.9c-68.5 0-91.1 31.4-91.1 85.3V192h-45v64h45v192h83V256h56.4l7.6-64H288z"/></svg>
     </a>
-  </div>
+  </div> -->
 
   
 {{ with .Params.comments }}
